--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -238,11 +238,16 @@
     <Compile Include="Assets\Scripts\GameScripts\MainMenuManager.cs" />
     <Compile Include="Assets\Scripts\GameScripts\MenuRocket.cs" />
     <Compile Include="Assets\Scripts\GameScripts\PlaneMotor.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\RocketGameEverythingLoader.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\RocketGameManager.cs" />
     <Compile Include="Assets\Scripts\GameScripts\RocketMotorNGUI.cs" />
-    <Compile Include="Assets\Scripts\GameScripts\StoreStats.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\StoreManager.cs" />
     <Compile Include="Assets\Scripts\GameScripts\ThingsSpawnerNGUI.cs" />
     <Compile Include="Assets\Scripts\GameScripts\TopPanelReporterNGUI.cs" />
     <Compile Include="Assets\Scripts\GameScripts\UpgradesStore.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\XML Loaders\StoreStats.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\XML Loaders\StoreStatsContainer.cs" />
+    <Compile Include="Assets\Scripts\GameScripts\XML Loaders\StoreStatsLoader.cs" />
     <Compile Include="Assets\Scripts\Helper\DamagePopup.cs" />
     <Compile Include="Assets\Scripts\Helper\MerchantObj.cs" />
     <Compile Include="Assets\Scripts\Helper\PlayerInfoWidget.cs" />
